--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -211,3 +211,53 @@ input.dark:-webkit-autofill:active {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
+
+.my-checkout-success {
+  position: relative;
+  z-index: 1;
+}
+
+.my-checkout-success::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  position: absolute;
+  border-radius: 50%;
+  opacity: 0.2;
+  z-index: -1;
+}
+
+.my-checkout-success::before {
+  content: "";
+  width: 120%;
+  height: 120%;
+  background-color: gray;
+  position: absolute;
+  border-radius: 50%;
+  opacity: 0.2;
+  z-index: -1;
+}
+
+.my-checkout-success::before {
+  animation: ping2 1200ms cubic-bezier(0.9, 0.7, 0.5, 0.9) infinite;
+}
+
+.my-checkout-success::after {
+  animation: ping 1000ms cubic-bezier(0.9, 0.7, 0.5, 0.9) infinite;
+}
+
+@keyframes ping {
+  75%,
+  100% {
+    transform: scale(1.3);
+    opacity: 0;
+  }
+}
+@keyframes ping2 {
+  75%,
+  100% {
+    transform: scale(1.3);
+    opacity: 0;
+  }
+}
