--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -215,49 +215,62 @@ input.dark:-webkit-autofill:active {
 .my-checkout-success {
   position: relative;
   z-index: 1;
+  background: black;
 }
 
-.my-checkout-success::after {
+.my-checkout-success .circle-1 {
   content: "";
-  width: 100%;
-  height: 100%;
-  background-color: gray;
+  width: 140%;
+  height: 140%;
+  background-color: #bababa;
   position: absolute;
   border-radius: 50%;
-  opacity: 0.2;
+  opacity: 1;
   z-index: -1;
 }
 
-.my-checkout-success::before {
+.my-checkout-success .circle-2 {
   content: "";
-  width: 120%;
-  height: 120%;
-  background-color: gray;
+  width: 180%;
+  height: 180%;
+  background-color: #ddd;
   position: absolute;
   border-radius: 50%;
-  opacity: 0.2;
-  z-index: -1;
+  opacity: 0.8;
+  z-index: -2;
 }
 
-.my-checkout-success::before {
-  animation: ping2 1200ms cubic-bezier(0.9, 0.7, 0.5, 0.9) infinite;
+.my-checkout-success .circle-1 {
+  animation: ping2 3s infinite;
+}
+.my-checkout-success .circle-2 {
+  animation: ping3 2s infinite;
 }
 
-.my-checkout-success::after {
-  animation: ping 1000ms cubic-bezier(0.9, 0.7, 0.5, 0.9) infinite;
-}
+@keyframes ping2 {
+  0% {
+    opacity: 1;
+  }
 
-@keyframes ping {
-  75%,
+  50% {
+    opacity: 0.7;
+  }
+
   100% {
-    transform: scale(1.3);
-    opacity: 0;
+    opacity: 1;
   }
 }
-@keyframes ping2 {
-  75%,
+
+@keyframes ping3 {
+  0% {
+    opacity: 0.7;
+  }
+
+  50% {
+    opacity: 0.4;
+  }
+
   100% {
-    transform: scale(1.3);
-    opacity: 0;
+    opacity: 0.7;
   }
 }
