--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -216,6 +216,12 @@ input.dark:-webkit-autofill:active {
   }
 }
 
+.scroll-none {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scroll-behavior: smooth;
+}
+
 .my-shadow {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
