fix theme, header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
-
-@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 
 /* Blog specific styles */
 .line-clamp-3 {
@@ -192,6 +191,13 @@ input.dark:-webkit-autofill,
 input.dark:-webkit-autofill:hover,
 input.dark:-webkit-autofill:focus,
 input.dark:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #ffffff;
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: inset 0 0 20px 20px #23232329;
+}
+
+.dark:-webkit-autofill {
   -webkit-background-clip: text;
   -webkit-text-fill-color: #ffffff;
   transition: background-color 5000s ease-in-out 0s;
